--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
 desktop-ui/frontend/dist/
 desktop-ui/frontend/node_modules/
-node_modules
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+desktop-ui/build
